--- a/index.html
+++ b/index.html
@@ -45,90 +45,156 @@
       <!--Ordered by closest arrival time-->
       <ul class="allbuses">
         <li class="businfo">
-          <div class="busnumber"><h2>J14</h2></div>
+          <div class="busnumber">
+            <h2>J14</h2>
+          </div>
           <div class="busdirection">
-            <span class="direction">Southbound</span> <span class="to">to</span><h4 class="finalstop">103rd/Stony Island</h4></span>
+            <div class="direction">Southbound</div>&nbsp;
+            <div class="to">to</div>
+            <h4 class="finalstop">103rd/Stony Island</h4>
           </div>
           <div class="bustime">
-            <span class="etablock">ETA &nbsp;<i class="far fa-clock"></i>&nbsp;&nbsp;<h4 class="etaminutes">5 min</h4><br><span class="to">Runs every 15  min</span></span>
+            <div class="etablock">ETA &nbsp;
+              <i class="far fa-clock"></i>&nbsp;&nbsp;
+              <h4 class="etaminutes">5 min</h4><br>
+              <div class="to">Runs every 15 min</div>
+            </div>
           </div>
         </li>
         <li class="businfo">
-          <div class="busnumber"><h2>151</h2></div>
+          <div class="busnumber">
+            <h2>151</h2>
+          </div>
           <div class="busdirection">
-            <span class="direction">Northbound</span> <span class="to">to</span><h4 class="finalstop">Devon/Clark</h4></span>
+            <div class="direction">Northbound</div>&nbsp;
+            <div class="to">to</div>
+            <h4 class="finalstop">Devon/Clark</h4>
           </div>
           <div class="bustime">
-            <span class="etablock">ETA &nbsp;<i class="far fa-clock"></i>&nbsp;&nbsp;<h4 class="etaminutes">6 min</h4><br><span class="to">Runs every 16 min</span></span>
+            <div class="etablock">ETA &nbsp;
+              <i class="far fa-clock"></i>&nbsp;&nbsp;
+              <h4 class="etaminutes">6 min</h4><br>
+              <div class="to">Runs every 16 min</div>
+            </div>
           </div>
         </li>
         <li class="businfo">
-          <div class="busnumber"><h2>124</h2></div>
+          <div class="busnumber">
+            <h2>124</h2>
+          </div>
           <div class="busdirection">
-            <span class="direction">Eastbound</span> <span class="to">to</span><h4 class="finalstop">Navy Pier</h4></span>
+            <div class="direction">Eastbound</div>&nbsp;
+            <div class="to">to</div>
+            <h4 class="finalstop">Navy Pier</h4>
           </div>
           <div class="bustime">
-            <span class="etablock">ETA &nbsp;<i class="far fa-clock"></i>&nbsp;&nbsp;<h4 class="etaminutes">9 min</h4><br><span class="to">Runs every  10 min</span></span>
+            <div class="etablock">ETA &nbsp;
+              <i class="far fa-clock"></i>&nbsp;&nbsp;
+              <h4 class="etaminutes">9 min</h4><br>
+              <div class="to">Runs every 10 min</div>
+            </div>
           </div>
         </li>
         <li class="businfo">
-          <div class="busnumber"><h2>60</h2></div>
+          <div class="busnumber">
+            <h2>60</h2>
+          </div>
           <div class="busdirection">
-            <span class="direction">Eastbound</span> <span class="to">to</span><h4 class="finalstop">Randolph/Harbor Dr</h4></span>
+            <div class="direction">Eastbound</div>&nbsp;
+            <div class="to">to</div>
+            <h4 class="finalstop">Randolph/Harbor Dr</h4>
           </div>
           <div class="bustime">
-            <span class="etablock">ETA &nbsp;<i class="far fa-clock"></i>&nbsp;&nbsp;<h4 class="etaminutes">12 min</h4><br><span class="to">Runs every 20 min</span></span>
+            <div class="etablock">ETA &nbsp;
+              <i class="far fa-clock"></i>&nbsp;&nbsp;
+              <h4 class="etaminutes">12 min</h4><br>
+              <div class="to">Runs every 20 min</div>
+            </div>
           </div>
         </li>
         <li class="businfo">
-          <div class="busnumber"><h2>124</h2></div>
+          <div class="busnumber">
+            <h2>124</h2>
+          </div>
           <div class="busdirection">
-            <span class="direction">Southbound</span> <span class="to">to</span><h4 class="finalstop">Navy Pier</h4></span>
+            <div class="direction">Southbound</div>&nbsp;
+            <div class="to">to</div>
+            <h4 class="finalstop">Navy Pier</h4>
           </div>
           <div class="bustime">
-            <span class="etablock">ETA &nbsp;<i class="far fa-clock"></i>&nbsp;&nbsp;<h4 class="etaminutes">15 min</h4><br><span class="to">Runs every 10 min</span></span>
+            <div class="etablock">ETA &nbsp;
+              <i class="far fa-clock"></i>&nbsp;&nbsp;
+              <h4 class="etaminutes">15 min</h4><br>
+              <div class="to">Runs every 10 min</div>
+            </div>
           </div>
         </li>
         <li class="businfo">
-          <div class="busnumber"><h2>4</h2></div>
+          <div class="busnumber">
+            <h2>4</h2>
+          </div>
           <div class="busdirection oosresume">
             <!--Added dotted red border around out of service-->
-            <span class="outofservice">Out of Service</span><h4 class="finalstop">Cottage Grove</h4></span>
+            <div class="outofservice">Out of Service</div>
+            <h4 class="finalstop">Cottage Grove</h4>
           </div>
           <div class="bustime">
-            <span class="etablock"><span class="resumes">Resumes<br><h4 class="etaminutesresume">12:10 AM</h4></span><span>
-            </div>
-          </li>
-          <li class="businfo">
-            <div class="busnumber"><h2>20</h2></div>
-            <div class="busdirection oosresume">
-              <span class="outofservice">Out of service</span><h4 class="finalstop">Madison</h4></span>
-            </div>
-            <div class="bustime">
-              <span class="etablock"><span class="resumes">Resumes<br><h4 class="etaminutesresume">12:10 AM</h4></span><span>
+            <div class="etablock">
+              <div class="resumes">Resumes<br>
+                <h4 class="etaminutesresume">12:10 AM</h4>
               </div>
-            </li>
-            <li class="businfo">
-              <div class="busnumber"><h2>157</h2></div>
-              <div class="busdirection oosresume">
-                <span class="outofservice">Out of service</span><h4 class="finalstop">Streeterville/Taylor</h4></span>
-              </div>
-              <div class="bustime">
-                <span class="etablock"><span class="resumes">Resumes<br><h4 class="etaminutesresume">06:00 AM</h4></span><span>
-                </div>
-              </li>
-              <li class="businfo">
-                <div class="busnumber"><h2>6x</h2></div>
-                <div class="busdirection oosresume">
-                  <!--Added solid red border around reroute-->
-                  <span class="reroute">Reroute</span><h4 class="finalstop">Jackson Park Express</h4></span>
-                </div>
-                <div class="bustime">
-                  <span class="etablock">&nbsp;<h4 class="etaminutes NA" >N/A</h4><span>
-                  </div>
-                </li>
-              </ul>
-            </section>
+            </div>
           </div>
-        </body>
-        </html>
+        </li>
+        <li class="businfo">
+          <div class="busnumber">
+            <h2>20</h2>
+          </div>
+          <div class="busdirection oosresume">
+            <div class="outofservice">Out of service</div>
+            <h4 class="finalstop">Madison</h4>
+          </div>
+          <div class="bustime">
+            <div class="etablock">
+              <div class="resumes">Resumes<br>
+                <h4 class="etaminutesresume">12:10 AM</h4>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="businfo">
+          <div class="busnumber">
+            <h2>157</h2>
+          </div>
+          <div class="busdirection oosresume">
+            <div class="outofservice">Out of service</div>
+            <h4 class="finalstop">Streeterville/Taylor</h4>
+          </div>
+          <div class="bustime">
+            <div class="etablock">
+              <div class="resumes">Resumes<br>
+                <h4 class="etaminutesresume">06:00 AM</h4>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="businfo">
+          <div class="busnumber">
+            <h2>6x</h2>
+          </div>
+          <div class="busdirection oosresume">
+            <!--Added solid red border around reroute-->
+            <div class="reroute">Reroute</div>
+            <h4 class="finalstop">Jackson Park Express</h4>
+          </div>
+          <div class="bustime">
+            <div class="etablock">&nbsp;
+              <h4 class="etaminutes NA">N/A</h4>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+  </div>
+</body>
+</html>
